# GameOfLife

./: .gitignore  LICENSE  NOTES.md  README.md
gol_cpp/: .clang-format  CMakeLists.txt  main.cpp
gol_python/: main.py
gol_python/v2/: gol2.pyi  main.py
gol_python/v3/: main.py  requirements.txt
python/: main.py
python/v1/: main.py
python/v2/: gol.pyx  main.py
python/v3/: gol3.pyi  gol3.pyx
